# econnlp

./: .gitignore  README.md  setup.cfg
src/: develop.py
src/econnlp/: __init__.py
src/econnlp/comparing/: compare.py
src/econnlp/embedding/: docs.py
