# Read this guide: https://jwodder.github.io/kbits/posts/pypkg-data/#including-package-data-via-setup-py-setup-cfg
[metadata]
name = econnlp
version = 0.0.1
author = Nicolaj Søndergaard Mühlbach
author_email = n.muhlbach@gmail.com
description = An Econ Approach to NLP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/muhlbach/econnlp
keywords = natural language processing, deep learning, machine learning
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:
package_dir =
    = src
install_requires =
    bodyguard>=0.0.23

[options.packages.find]
where = src